# SentientOS

./: .gitignore  .sentshell  BUILD_AND_TEST.md  Cargo.toml  LICENSE  README.md  build.sh  demo_record.sh  planning.md  run-sentientos.sh  run-tso.sh  sentshell
.container/test_app/: meta.yaml
.gossip/hash_cache/: peer1.json  peer2.json
.gossip/peers/: peer1.json  test_peer.json
.lock/zk.trace/: system.zky
applications/adv-iot-app/: Cargo.toml
applications/iot-dapp/: package.json  server.js
burn_results/: bootstrap.json  complete-oracle-burn-results.json  container.json  gossip.json  intent_replay.json  oracle-burn-results.json  panic_recovery.json  performance.json  store.json  zk_verification.json
demo_recordings/: cast_to_gif.py  convert_cast_to_svg.py  create_all_demos.sh  enterprise_demo.sh
demo_recordings/backup/: terminalizer-config.yml
examples/: hello.wasm
src/: lib.rs  main.rs
src/boot/: iot.rs  mod.rs  zig_interface.rs
src/cli/: linux.rs  mod.rs  zk.rs
src/core/: error.rs  fs.rs  mod.rs
src/filesystem/: mod.rs
src/gossip/: mod.rs  peers.rs  protocol.rs  sync.rs  verify.rs
src/heal/: mod.rs  recovery.rs  snapshot.rs  (+1 more)
tools/: burn-report.json  complete-oracle-burn.sh  integrate-burn-results.sh  oracle-burn-demo.sh  oracle-burn.sh  real-oracle-burn.sh  run-oracle-burn.sh  tso-burn.sh
tso_build/: runtime.zig
tso_burn_output/: .bashrc  README.md  ai-ethics-demo.sh  burn_app.wat  cloud-benchmark.sh  demo-secure-app.sh  distributed-reality-demo.sh  enterprise_launcher.sh  neural-symbolic-demo.sh  process-isolation-demo.sh  quantum-resilient-demo.sh  robotics-sim.sh  run_calculator_app.sh  run_image_processor.sh  run_iot_app.sh  run_iot_dapp.sh  security-sim.sh  sentient.sh  sentient_app.py  zero-trust-network-demo.sh  zk-filesystem-demo.sh
(+99 files in other folders)
